packages/react-notion-x/src/styles.css
/* ... */
.notion-collection {
  align-self: center;
  min-width: 100%;
}

.notion-collection-header {
  display: flex;
  align-items: center;
  height: 42px;
  padding: 4px 2px;
  white-space: nowrap;
  overflow: hidden;
}

.notion-collection-header-title {
  display: inline-flex;
  align-items: center;
  font-size: 1.25em;
  line-height: 1.2;
  font-weight: 600;
  white-space: pre-wrap;
  word-break: break-word;
  margin-right: 0.5em;
}

.notion-collection-view-dropdown {
  cursor: pointer;
  padding: 6px 8px;
  border: 0 none;
  border-radius: 3px;
  transition: background 120ms ease-in 0s;
  background: transparent;
}

.notion-collection-view-dropdown:hover {
  background: var(--bg-color-0);
}

.notion-collection-view-dropdown-icon {
  position: relative;
  top: 2px;
  margin-left: 4px;
}

.notion-collection-view-type {
  display: flex;
  align-items: center;
  font-size: 14px;
}

.notion-collection-view-type-icon {
  display: inline-block;
  width: 14px;
  height: 14px;
  /* fill: var(--fg-color); */
  fill: rgba(55, 53, 47);
  margin-right: 6px;
}

.notion-collection-view-type-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: var(--fg-color);
}

.notion-table {
  width: 100vw;
  max-width: 100vw;
  align-self: center;
  overflow: auto hidden;
}

.notion-table-view {
  position: relative;
  float: left;
  min-width: var(--notion-max-width);
  padding-left: 0;
}

.notion-table-header {
  display: flex;
  position: absolute;
  z-index: 82;
  height: 33px;
  color: var(--fg-color-3);
  min-width: var(--notion-max-width);
}

.notion-table-header-inner {
  width: 100%;
  display: inline-flex;
  border-top: 1px solid var(--fg-color-1);
  border-bottom: 1px solid var(--fg-color-1);
  /* box-shadow: white -3px 0 0, rgba(55, 53, 47, 0.16) 0 1px 0; */
}

.notion-table-header-placeholder {
  height: 34px;
}

.notion-table-th {
  display: flex;
  position: relative;
}

.notion-table-view-header-cell {
  display: flex;
  flex-shrink: 0;
  overflow: hidden;
  height: 32px;
  font-size: 14px;
  padding: 0;
}

.notion-table-view-header-cell-inner {
  user-select: none;
  display: flex;
  width: 100%;
  height: 100%;
  padding-left: 8px;
  padding-right: 8px;
  border-right: 1px solid var(--fg-color-0);
}

.notion-table-th:last-child .notion-table-view-header-cell-inner {
  border-right: 0 none;
}

.notion-collection-column-title {
  display: flex;
  align-items: center;
  line-height: 120%;
  min-width: 0;
  font-size: 14px;
}

.notion-collection-column-title-icon {
  display: inline-block;
  width: 14px;
  height: 14px;
  min-width: 14px;
  min-height: 14px;
  fill: var(--fg-color-2);
  margin-right: 6px;
}

.notion-collection-column-title-body {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notion-table-body {
  position: relative;
  min-width: var(--notion-max-width);
}

.notion-table-row {
  display: flex;
  border-bottom: 1px solid var(--fg-color-1);
}

.notion-table-cell {
  min-height: 32px;
  padding: 5px 8px 6px;
  font-size: 14px;
  line-height: 1;
  white-space: normal;
  overflow: hidden;
  word-break: break-word;
  border-right: 1px solid var(--fg-color-1);
}

.notion-table-cell:last-child {
  border-right: 0 none;
}

.notion-table-cell.notion-table-cell-nowrap {
  white-space: nowrap;
  text-overflow: ellipsis;
}

.notion-table-cell .notion-page-icon-inline {
  flex-shrink: 0;
}

.notion-table-cell-title {
  font-weight: 500;
}

.notion-table-cell-title .notion-page-link {
  font-style: normal;
  font-weight: 500;
}

.notion-table-cell-title .notion-page-link em,
.notion-table-cell-title .notion-page-link i,
.notion-table-cell-title .notion-page-link b,
.notion-table-cell-title .notion-page-link strong {
  font-style: inherit;
  font-weight: inherit;
}

.notion-table-cell-text {
  white-space: pre-wrap;
}

.notion-table-cell-text,
.notion-table-cell-number,
.notion-table-cell-url,
.notion-table-cell-email,
.notion-table-cell-phone_number {
  line-height: 1.5;
}

.notion-url-domain {
  color: inherit;
}

.notion-url-path {
  color: rgba(55, 53, 47, 0.45);
}

.dark-mode .notion-url-path {
  color: rgba(255, 255, 255, 0.4);
}

.notion-table-cell-number {
  white-space: pre-wrap;
}

.notion-table-cell-select,
.notion-table-cell-multi_select {
  padding: 7px 8px 0;
}

.notion-table-cell-auto_increment_id {
  color: var(--fg-color-7);
}

.notion-property-select,
.notion-property-status,
.notion-property-multi_select {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
}

.notion-property-select-item,
.notion-property-status-item,
.notion-property-multi_select-item {
  display: flex;
  align-items: center;
  padding: 0 6px;
  border-radius: 3px;
  height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 120%;
}

.notion-property-status-item {
  border-radius: 20px;
}

.notion-property-file {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
}

.notion-property-file img {
  max-height: 24px;
  max-width: 100%;
  margin-right: 6px;
}

.notion-collection-card-cover .notion-property-file {
  height: 100%;
}

.notion-collection-card-cover .notion-property-file img {
  width: 100%;
  margin: 0;
  max-height: 100%;
}

.notion-collection-card .notion-property-checkbox-container {
  display: flex;
}

.notion-property-checkbox-text {
  display: none;
}

.notion-collection-card .notion-property-checkbox-text {
  display: inline-block;
  margin-left: 6px;
}

.notion-property-checkbox {
  width: 16px;
  height: 16px;
}

.notion-property-checkbox-checked {
  width: 16px;
  height: 16px;
  background: var(--select-color-0);
}

.notion-property-checkbox-checked svg {
  position: relative;
  display: block;
  /* top: -3px; */
  top: 1px;
  left: 1px;
  width: 14px;
  height: 14px;
  fill: #fff;
}

.notion-property-checkbox-unchecked {
  width: 16px;
  height: 16px;
  border: 1.3px solid var(--fg-color);
}

.notion-gallery {
  align-self: center;
}
/* ... */

